Solved Home click issue

--- a/public/baani.html
+++ b/public/baani.html
@@ -9,16 +9,15 @@
         scroll-behavior: smooth;
       }
     </style>
-   
-   
-    <link rel="stylesheet" href="baani.css">
+
+    <link rel="stylesheet" href="baani.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  />
-    
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
     <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -65,9 +64,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >HOME</a
-                >
+                <a class="nav-link active" href="/Home">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="/events">EVENTS</a>
@@ -129,76 +126,99 @@
         </div>
       </div>
     </section> -->
-<section class="events88">
-<div class="events_body">
-    <div class="events-title">the</div>
-    <div class="EVENT">EVENTS<span>&</span></div>
-    <div class="workshops">WORKSHOPS<span>organised</span></div>
-    <div class="timeline">
-        <div class="container left-container">
+    <section class="events88">
+      <div class="events_body">
+        <div class="events-title">the</div>
+        <div class="EVENT">EVENTS<span>&</span></div>
+        <div class="workshops">WORKSHOPS<span>organised</span></div>
+        <div class="timeline">
+          <div class="container left-container">
             <div class="imgcon"></div>
             <div class="text-box1">
-                <h1 class="evehead">EVENT 1</h1>
-                <p class="event_name">INDUCTIONS</p>
-                <div class="date">25-08-2023</div>
-                <p class="content">The CYBERNAUTS induction event welcomed new members into our dynamic coding community, celebrating innovation, collaboration, and a passion for technology. Highlights included interactive workshops and inspiring talks from industry leaders.</p>
-               <!-- <div class="evebutton"><a><i class="fa-brands fa-linkedin"></i><a><i class="fa-brands fa-square-instagram"></i></a></a></div>  -->
-                <!-- <span class="left-container-arrow"></span> -->
-
+              <h1 class="evehead">EVENT 1</h1>
+              <p class="event_name">INDUCTIONS</p>
+              <div class="date">25-08-2023</div>
+              <p class="content">
+                The CYBERNAUTS induction event welcomed new members into our
+                dynamic coding community, celebrating innovation, collaboration,
+                and a passion for technology. Highlights included interactive
+                workshops and inspiring talks from industry leaders.
+              </p>
+              <!-- <div class="evebutton"><a><i class="fa-brands fa-linkedin"></i><a><i class="fa-brands fa-square-instagram"></i></a></a></div>  -->
+              <!-- <span class="left-container-arrow"></span> -->
             </div>
-        </div>
-        <div class="container right-container">
-            <img src="3.png">
+          </div>
+          <div class="container right-container">
+            <img src="3.png" />
             <div class="text-box2">
-                <h1>EVENT 2</h1>
-                <p class="event_name">INTRODUCTORY SESSIONS</p>
-                <div class="date">05-09-2023</div>
-                <p class="content"> Club, recently conducted its introductory session. Attendees were introduced to the club's mission, upcoming projects, and the exciting opportunities that lie ahead. This session marks the beginning of our collaborative journey in the world of coding and technology.</p>
-                <!-- <div class="evebutton"><a>See More</a></div>  -->
-                <!-- <span class="right-container-arrow"></span> -->
-
+              <h1>EVENT 2</h1>
+              <p class="event_name">INTRODUCTORY SESSIONS</p>
+              <div class="date">05-09-2023</div>
+              <p class="content">
+                Club, recently conducted its introductory session. Attendees
+                were introduced to the club's mission, upcoming projects, and
+                the exciting opportunities that lie ahead. This session marks
+                the beginning of our collaborative journey in the world of
+                coding and technology.
+              </p>
+              <!-- <div class="evebutton"><a>See More</a></div>  -->
+              <!-- <span class="right-container-arrow"></span> -->
             </div>
-        </div>
+          </div>
 
-        <div class="container left-container">
+          <div class="container left-container">
             <div class="imgcon"></div>
             <div class="text-box3">
-                <h1>EVENT 3</h1>
-                <p class="event_name">WEB-D WORKSHOP</p>
-                <div class="date">21-10-2023</div>
-                <p class="content">An engaging Web Development (WebD) workshop where students were introduced to the basics of web development, including HTML, CSS, and JavaScript. Participants also completed hands-on projects, creating their own web pages and applications.</p>
-               <!-- <div class="evebutton"><a>See More</a></div>  -->
-                <!-- <span class="left-container-arrow"></span> -->
-
+              <h1>EVENT 3</h1>
+              <p class="event_name">WEB-D WORKSHOP</p>
+              <div class="date">21-10-2023</div>
+              <p class="content">
+                An engaging Web Development (WebD) workshop where students were
+                introduced to the basics of web development, including HTML,
+                CSS, and JavaScript. Participants also completed hands-on
+                projects, creating their own web pages and applications.
+              </p>
+              <!-- <div class="evebutton"><a>See More</a></div>  -->
+              <!-- <span class="left-container-arrow"></span> -->
             </div>
-        </div>
+          </div>
 
-        <div class="container right-container">
-            <img src="3.png">
-            <div class="text-box4 ">
-                <h1>EVENT 4</h1>
-                <p class="event_name">DSA (Data Structures & Algorithms)</p>
-                <div class="date">25-12-2023</div>
-                <p class="content"> Workshop on Data Structures and Algorithms (DSA) held . Attendees were introduced to core concepts and learned how to effectively navigate through various data structures and algorithms. This workshop provided a solid foundation for understanding and applying DSA in real-world scenarios.</p>
-                <!-- <div class="evebutton"><a>See More</a></div>  -->
-               <!-- <div class="evebutton"><a>See More</a></div>  -->
-                <!-- <span class="right-container-arrow"></span> -->
-
+          <div class="container right-container">
+            <img src="3.png" />
+            <div class="text-box4">
+              <h1>EVENT 4</h1>
+              <p class="event_name">DSA (Data Structures & Algorithms)</p>
+              <div class="date">25-12-2023</div>
+              <p class="content">
+                Workshop on Data Structures and Algorithms (DSA) held .
+                Attendees were introduced to core concepts and learned how to
+                effectively navigate through various data structures and
+                algorithms. This workshop provided a solid foundation for
+                understanding and applying DSA in real-world scenarios.
+              </p>
+              <!-- <div class="evebutton"><a>See More</a></div>  -->
+              <!-- <div class="evebutton"><a>See More</a></div>  -->
+              <!-- <span class="right-container-arrow"></span> -->
             </div>
-        </div>
-        <div class="container left-container">
+          </div>
+          <div class="container left-container">
             <div class="imgcon"></div>
             <div class="text-box5">
-                <h1>EVENT 5</h1>
-                <p class="event_name">MACHINE LEARNING & AI/ML</p>
-                <div class="date">15-06-2024</div>
-                <p class="content">Club recently hosted a captivating event on Machine Learning and AI/ML fundamentals. Attendees explored key concepts, essential algorithms, and real-world applications. This inspiring session has beautifully equipped participants to dive deeper into the fascinating world of AI.</p>
-                
-                <!-- <span class="left-container-arrow"></span> -->
+              <h1>EVENT 5</h1>
+              <p class="event_name">MACHINE LEARNING & AI/ML</p>
+              <div class="date">15-06-2024</div>
+              <p class="content">
+                Club recently hosted a captivating event on Machine Learning and
+                AI/ML fundamentals. Attendees explored key concepts, essential
+                algorithms, and real-world applications. This inspiring session
+                has beautifully equipped participants to dive deeper into the
+                fascinating world of AI.
+              </p>
 
+              <!-- <span class="left-container-arrow"></span> -->
             </div>
-        </div>
-        <!-- <div class="container right-container">
+          </div>
+          <!-- <div class="container right-container">
             <img src="3.png">
             <div class="text-box6">
                 <h1>EVENT 6</h1>
@@ -211,162 +231,161 @@
             </div>
 
     </div> -->
-    </div>
-    <!-- <div class="se"><a>See More</a><i class="fa-solid fa-arrow-right"></i></div> -->
-</div>
-</section>
-<section class="prefooter">
-  <div class="contact-us">
-    <div class="left">
-      <div class="chotu">
-        Let's <br />
-        Talk
+        </div>
+        <!-- <div class="se"><a>See More</a><i class="fa-solid fa-arrow-right"></i></div> -->
       </div>
-      <div class="ani">
-        <h2>Have a Project <br />in mind? <br />contact us!</h2>
-      </div>
-    </div>
-    <div class="right">
-      <div class="subscribe">
-        <div class="inputbox">
-          <input type="text" required="required" />
-          <span>Your email address</span>
-          <i></i>
+    </section>
+    <section class="prefooter">
+      <div class="contact-us">
+        <div class="left">
+          <div class="chotu">
+            Let's <br />
+            Talk
+          </div>
+          <div class="ani">
+            <h2>Have a Project <br />in mind? <br />contact us!</h2>
+          </div>
+        </div>
+        <div class="right">
+          <div class="subscribe">
+            <div class="inputbox">
+              <input type="text" required="required" />
+              <span>Your email address</span>
+              <i></i>
+            </div>
+          </div>
+          <div class="query">
+            <div class="query-input">
+              <textarea id="query-input" required="required"></textarea>
+              <span id="query-placeholder">Drop your msg</span>
+              <i></i>
+            </div>
+          </div>
+          <button class="send">Send Now</button>
         </div>
       </div>
-      <div class="query">
-        <div class="query-input">
-          <textarea id="query-input" required="required"></textarea>
-          <span id="query-placeholder">Drop your msg</span>
-          <i></i>
-        </div>
-      </div>
-      <button class="send">Send Now</button>
-    </div>
-  </div>
-</section>
-<section class="footer11">
-  <footer>
-    <div id="imgpara">
-      <div class="logo">
-        <div id="img"></div>
-        <h3>
-          Cyber<i class="fa-solid fa-rocket"><span class="flame"></span></i
-          ><span>Nauts</span>
-        </h3>
-      </div>
+    </section>
+    <section class="footer11">
+      <footer>
+        <div id="imgpara">
+          <div class="logo">
+            <div id="img"></div>
+            <h3>
+              Cyber<i class="fa-solid fa-rocket"><span class="flame"></span></i
+              ><span>Nauts</span>
+            </h3>
+          </div>
 
-      <div id="para">
-        <p>
-          At Cybernauts, members dive into workshops, seminars,
-          hackathons,and competitions, gaining new skills, sharing ideas,
-          connecting with peers and industry pros. Join us for exciting
-          events that fuel your growth and creativity!
-        </p>
-      </div>
-    </div>
-    <div id="links1">
-      <center>
-        <h5>Website Links</h5>
-        <ul>
-          <!-- <a href="" style="text-decoration: none"><li>Home</li></a>
+          <div id="para">
+            <p>
+              At Cybernauts, members dive into workshops, seminars,
+              hackathons,and competitions, gaining new skills, sharing ideas,
+              connecting with peers and industry pros. Join us for exciting
+              events that fuel your growth and creativity!
+            </p>
+          </div>
+        </div>
+        <div id="links1">
+          <center>
+            <h5>Website Links</h5>
+            <ul>
+              <!-- <a href="" style="text-decoration: none"><li>Home</li></a>
           <a href="" style="text-decoration: none"><li>About</li></a>
           <a href="" style="text-decoration: none"><li>Gallery</li></a>
           <a href="" style="text-decoration: none"><li>Faqs</li></a> -->
-          <li><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Vision</a></li>
-          <li><a href="">Gallery</a></li>
-        </ul>
-      </center>
-    </div>
-    <div id="links2">
-      <center>
-        <h5>Explore</h5>
-        <ul>
-          <!-- <a href="" style="text-decoration: none"><li>events</li></a>
+              <li><a href="">Home</a></li>
+              <li><a href="">About Us</a></li>
+              <li><a href="">Vision</a></li>
+              <li><a href="">Gallery</a></li>
+            </ul>
+          </center>
+        </div>
+        <div id="links2">
+          <center>
+            <h5>Explore</h5>
+            <ul>
+              <!-- <a href="" style="text-decoration: none"><li>events</li></a>
           <a href="" style="text-decoration: none"><li>Contact Us</li></a>
           <a href="" style="text-decoration: none"
             ><li>Give Feedback</li></a
           >
           <a href="" style="text-decoration: none"><li>projects</li></a> -->
-          <li><a href="">Events</a></li>
-          <li><a href="">Team</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Projects</a></li>
-        </ul>
-      </center>
-    </div>
-    <div id="links3">
-      <h5>Follow Us</h5>
-      <ul>
-        <li>
-          <a
-            href="https://discord.com/channels/1147565564357771324/1147565564357771326"
-            target="_blank"
-            style="text-decoration: none"
-            id="icons"
-          >
-            <i class="fa-brands fa-discord" style="font-size: 1.75vw"></i>
-            <span>Discord</span>
-          </a>
-        </li>
+              <li><a href="">Events</a></li>
+              <li><a href="">Team</a></li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Projects</a></li>
+            </ul>
+          </center>
+        </div>
+        <div id="links3">
+          <h5>Follow Us</h5>
+          <ul>
+            <li>
+              <a
+                href="https://discord.com/channels/1147565564357771324/1147565564357771326"
+                target="_blank"
+                style="text-decoration: none"
+                id="icons"
+              >
+                <i class="fa-brands fa-discord" style="font-size: 1.75vw"></i>
+                <span>Discord</span>
+              </a>
+            </li>
 
-        <li>
-          <a
-            href="https://www.instagram.com/cybernauts_nitj/"
-            target="_blank"
-            style="text-decoration: none"
-            id="icons"
-          >
-            <i class="fa-brands fa-instagram" style="font-size: 2vw"></i>
-            <span>Instagram</span>
-          </a>
-        </li>
+            <li>
+              <a
+                href="https://www.instagram.com/cybernauts_nitj/"
+                target="_blank"
+                style="text-decoration: none"
+                id="icons"
+              >
+                <i class="fa-brands fa-instagram" style="font-size: 2vw"></i>
+                <span>Instagram</span>
+              </a>
+            </li>
 
-        <li>
-          <a
-            href="https://github.com/cybernautsNITJ"
-            target="_blank"
-            style="text-decoration: none"
-            id="icons"
-            ><i class="fa-brands fa-github" style="font-size: 2vw"></i
-            ><span>Github</span>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/cybernauts-nitj-717a7a28a/"
-            target="_blank"
-            style="text-decoration: none"
-            id="icons"
-            ><i class="fa-brands fa-linkedin" style="font-size: 2vw"></i
-            ><span>Linkedin</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <center>
-      <div id="bottomline1">
-        <p>
-          "EMPOWERING THE FUTURE WITH SEAMLESS INNOVATION WHERE TECHNOLOGY
-          MEETS LIMITLESS POTENTIAL"
-        </p>
-      </div>
-    </center>
-    <i class="line"></i>
-    <center>
-      <div id="bottomline2">
-        <p>
-          Copyright <i class="fa-regular fa-copyright"></i> 2024 Cybernauts
-          Society
-        </p>
-      </div>
-    </center>
-  </footer>
-</section>
-<script
-      src="baani.js"
-    ></script>
-  </body>
+            <li>
+              <a
+                href="https://github.com/cybernautsNITJ"
+                target="_blank"
+                style="text-decoration: none"
+                id="icons"
+                ><i class="fa-brands fa-github" style="font-size: 2vw"></i
+                ><span>Github</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/cybernauts-nitj-717a7a28a/"
+                target="_blank"
+                style="text-decoration: none"
+                id="icons"
+                ><i class="fa-brands fa-linkedin" style="font-size: 2vw"></i
+                ><span>Linkedin</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <center>
+          <div id="bottomline1">
+            <p>
+              "EMPOWERING THE FUTURE WITH SEAMLESS INNOVATION WHERE TECHNOLOGY
+              MEETS LIMITLESS POTENTIAL"
+            </p>
+          </div>
+        </center>
+        <i class="line"></i>
+        <center>
+          <div id="bottomline2">
+            <p>
+              Copyright <i class="fa-regular fa-copyright"></i> 2024 Cybernauts
+              Society
+            </p>
+          </div>
+        </center>
+      </footer>
+    </section>
+    <script src="baani.js"></script>
+     
+  </body>
 </html>
