--- a/public/vision.html
+++ b/public/vision.html
@@ -1,96 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vision and Mission</title>
 
-    <link rel="stylesheet" href="vision.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="vision.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-..."
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <section>
-        <div class="combine">
-          <div class="navbar">
-            <nav class="navbar navbar-expand-lg fixed-top">
-              <div class="container-fluid" style="background-color: black">
-                <!-- <a class="navbar-brand" href="#">CYBERNAUTS</a> -->
-                <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                >
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#"
-                        >HOME</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" href="/events">EVENTS</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" href="/saanvivision">VISION</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" href="/arvindteam">TEAM</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" href="/riteshhead">HEADS</a>
-                    </li>
-                  </ul>
-                </div>
+      <div class="combine">
+        <div class="navbar">
+          <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid" style="background-color: black">
+              <!-- <a class="navbar-brand" href="#">CYBERNAUTS</a> -->
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/Home">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/events">EVENTS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/saanvivision">VISION</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/arvindteam">TEAM</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/riteshhead">HEADS</a>
+                  </li>
+                </ul>
               </div>
-            </nav>
-          </div>
+            </div>
+          </nav>
         </div>
-      </section>
-      <section class="vision88">
-   <div id="VM">
-    <div id="vision">
-        <div id="visionheading">
+      </div>
+    </section>
+    <section class="vision88">
+      <div id="VM">
+        <div id="vision">
+          <div id="visionheading">
             <h1 id="visionheading1">VISION</h1>
-        </div>
-        <div class="light"></div>
-        <script type="text/javascript">
-            var pos= document.documentElement;
-            pos.addEventListener('mousemove', e=>{
-                pos.style.setProperty('--x',e.clientX +'px')
-                pos.style.setProperty('--y', e.clientY + 'px')
-            })
-        </script>
-         <div class="vision2">
+          </div>
+          <div class="light"></div>
+          <script type="text/javascript">
+            var pos = document.documentElement;
+            pos.addEventListener("mousemove", (e) => {
+              pos.style.setProperty("--x", e.clientX + "px");
+              pos.style.setProperty("--y", e.clientY + "px");
+            });
+          </script>
+          <div class="vision2">
             <h1 id="visionheading2">Vision</h1>
-         </div>
-        <div class="arrowvision">
+          </div>
+          <div class="arrowvision">
             <i class="fas fa-angle-left visionarrow" id="visionarrow1"></i>
 
             <div id="visiontext">
-                <p>Our vision at CYBERNAUTS is to cultivate a community of visionary digital leaders, inspiring innovation and driving positive global impact through cutting-edge technology. We envision a future where every member is empowered with comprehensive skills and knowledge, enabling them to pioneer transformative solutions that shape a better world</p>
+              <p>
+                Our vision at CYBERNAUTS is to cultivate a community of
+                visionary digital leaders, inspiring innovation and driving
+                positive global impact through cutting-edge technology. We
+                envision a future where every member is empowered with
+                comprehensive skills and knowledge, enabling them to pioneer
+                transformative solutions that shape a better world
+              </p>
             </div>
-            <i class="fas fa-angle-right visionarrow" id="visionarrow2"></i> 
+            <i class="fas fa-angle-right visionarrow" id="visionarrow2"></i>
+          </div>
         </div>
-    </div>
-   </div>
-</section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      </div>
+    </section>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="vision.js"></script>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
