--- a/public/ritesh.html
+++ b/public/ritesh.html
@@ -55,9 +55,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#"
-                        >HOME</a
-                      >
+                        <a class="nav-link active" href="/Home">HOME</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active" href="/events">EVENTS</a>
