Improved About-us

--- a/public/index.html
+++ b/public/index.html
@@ -97,31 +97,33 @@
     </div>
     <section class="about">
       <div class="abouttext">
-          <h1>Welcome to <span>CYBERNAUTS</span>, the <span>OFFICIAL</span> club of the IT Department at NITJ</h1>
+        <h1>
+          Welcome to <span>CYBERNAUTS</span> the <span>OFFICIAL</span> club of
+          the Information Technology Department<br />
+          at NIT JALANDHAR
+        </h1>
       </div>
       <div class="details">
-          <div class="subdetails">
-              <i class="fas fa-laptop-file"></i>
-              <span class="num" data-val="12+">00+</span>
-              <span class="text">Projects</span>
-          </div>
-          <div class="subdetails">
-              <i class="fas fa-gear"></i>
-              <span class="num" data-val="6+">0+</span>
-              <span class="text">Events</span>
-          </div>
-          <div class="subdetails">
-              <i class="fa-solid fa-user-group"></i>
-              <span class="num" data-val="25+">00+</span>
-              <span class="text">Members</span>
-          </div>
+        <div class="subdetails">
+          <i class="fas fa-laptop-file"></i>
+          <span class="num" data-val="12+">00+</span>
+          <span class="text">Projects</span>
+        </div>
+        <div class="subdetails">
+          <i class="fas fa-gear"></i>
+          <span class="num" data-val="6+">0+</span>
+          <span class="text">Events</span>
+        </div>
+        <div class="subdetails">
+          <i class="fa-solid fa-user-group"></i>
+          <span class="num" data-val="25+">00+</span>
+          <span class="text">Members</span>
+        </div>
       </div>
-  </section>
+    </section>
 
-<section class="diyagallery">
-    
-    <div class="diya">
-
+    <section class="diyagallery">
+      <div class="diya">
         <div class="text32">
           <div class="glimpse">
             GLIMPSE<br />
