--- a/public/arvind.html
+++ b/public/arvind.html
@@ -33,19 +33,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/Home">HOME</a>
+                    <a class="nav-link active" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="/events">EVENTS</a>
+                  <a class="nav-link active" href="baani.html">EVENTS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="/saanvivision">VISION</a>
+                  <a class="nav-link active" href="vision.html">VISION</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="/arvindteam">TEAM</a>
+                  <a class="nav-link active" href="arvind.html">TEAM</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="/riteshhead">HEADS</a>
+                  <a class="nav-link active" href="ritesh.html">HEADS</a>
                 </li>
               </ul>
             </div>
