--- a/public/index.html
+++ b/public/index.html
@@ -61,21 +61,21 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-content-center flex-grow-1 ps-3">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/home"
+                    <a class="nav-link active" aria-current="page" href="index.html"
                       >HOME</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/events">EVENTS</a>
+                    <a class="nav-link active" href="baani.html">EVENTS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/saanvivision">VISION</a>
+                    <a class="nav-link active" href="vision.html">VISION</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/arvindteam">TEAM</a>
+                    <a class="nav-link active" href="arvind.html">TEAM</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/riteshhead">HEADS</a>
+                    <a class="nav-link active" href="ritesh.html">HEADS</a>
                   </li>
                 </ul>
               </div>
