--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,20 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
+    /> -->
   </head>
 
   <body>
     <section id="landing">
       <div class="combine">
-        <div class="navbar">
+        <!-- <div class="navbar">
           <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid" style="background-color: black">
-              <!-- <a class="navbar-brand" href="#">CYBERNAUTS</a> -->
               <button
                 class="navbar-toggler"
                 type="button"
@@ -81,11 +80,20 @@
               </div>
             </div>
           </nav>
-        </div>
+        </div> -->
+        <nav>
+          <ul>
+            <li>HOME</li>
+            <li>EVENTS</li>
+            <li>VISION</li>
+            <li>TEAM</li>
+            <li>HEADS</li>
+          </ul>
+        </nav>
       </div>
     </section>
 
-    <div id="app">
+    <!-- <div id="app">
       <div id="hero">
         <h1>
           CREATIVE & <br />
@@ -93,6 +101,17 @@
           MEETS CODE
         </h1>
         <a target="_blank"></a>
+      </div>
+    </div> -->
+    <div class="test">
+      <div class="main">
+        <h2>A CLUB WHERE</h2>
+        <h1>
+          CREATIVE & <br /><span
+            ><img src="pictures/Group 4.png" alt=""
+          /></span>
+          <span class="idea">IDEAS</span> <br />MEETS CODE
+        </h1>
       </div>
     </div>
     <section class="about">
@@ -331,7 +350,6 @@
         </center>
       </footer>
     </section>
-
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
