--- a/public/index.html
+++ b/public/index.html
@@ -83,11 +83,11 @@
         </div> -->
         <nav>
           <ul>
-            <li>HOME</li>
-            <li>EVENTS</li>
-            <li>VISION</li>
-            <li>TEAM</li>
-            <li>HEADS</li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="baani.html">EVENTS</a></li>
+            <li><a href="vision.html">VISION</a></li>
+            <li><a href="arvind.html">TEAM</a></li>
+            <li><a href="ritesh.html">HEADS</a></li>
           </ul>
         </nav>
       </div>
